# UI-Debugger-Pro

./: README.md  package-lock.json  package.json
.github/workflows/: publish-packages.yml  publish-readme.yml  universal-release.yml
docs/: DETAILED_FEATURES.md  INSTALL_EXTENSION.md  INSTALL_PYTHON.md  INSTALL_REACT.md  INSTALL_VANILLA.md  WHICH_METHOD.md  bookmarklet_install.html  download_readme.html
ui_debugger_pro_ext/: background.js  content.js  manifest.json  popup.html  popup.js
ui_debugger_pro_js/: .ui-debugger.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.ts
ui_debugger_pro_js/playground/: index.html  main.tsx
ui_debugger_pro_js/src/: index.tsx  inject.ts  next-plugin.ts  plugin.ts  webpack-plugin.ts
ui_debugger_pro_pkg/: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
ui_debugger_pro_pkg/ui_debugger_pro/: __init__.py  asgi_middleware.py  cli.py  config.py  core.py  proxy_server.py
ui_debugger_pro_pkg/ui_debugger_pro/static/: debugger.tsx  loader.js
